--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.1",
     "buffer": "^6.0.3",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
@@ -28,7 +29,6 @@
       "react-app/jest"
     ]
   },
-  "proxy": "https://web-api.tp.entsoe.eu",
   "browser": {
     "buffer": true
   },
@@ -43,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://web-api.tp.entsoe.eu"
 }
