--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
-  "name": "react-electric-project",
+  "name": "demo-grapgh",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "buffer": "^6.0.3",
-    "http-proxy-middleware": "^2.0.6",
+    "i": "^0.3.7",
+    "i18next": "^22.4.5",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.0",
+    "npm": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.2.0",
     "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
     "timers": "^0.1.1",
     "web-vitals": "^2.1.4",
     "xml2js": "^0.4.23"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -28,9 +38,6 @@
       "react-app",
       "react-app/jest"
     ]
-  },
-  "browser": {
-    "buffer": true
   },
   "browserslist": {
     "production": [
@@ -43,6 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "https://web-api.tp.entsoe.eu"
+  }
 }
