--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
+    "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.2.0",
     "stream": "^0.0.2",
